2023-12-02  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: CWEB 4.11 release.

2023-11-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/fn-generate.perl: Add test for file names with
	over-BMP (4byte UTF-8).
	https://tug.org/pipermail/tex-live/2023-November/049685.html

2023-11-19  Karl Berry  <karl@freefriends.org>

	* tex.ch,
	* mf.ch (Undump the dynamic memory): improve fmt/base corruption
	checks, from DRF.

2023-11-19  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Use zero-initialisation.

2023-11-15  Karl Berry  <karl@freefriends.org>

	* tex.ch,
	* mf.ch (Undump the dynamic memory): check that p does not
	become too small, due to fmt/base corruption.
	Report from Gregory James DUCK to Karl, 14 Sep 2023.
	Found with a fuzz tester similar to AFL-fuzz. 

2023-10-25  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Fine print for command-line options.

2023-10-21  Andreas Scherer  <https://ascherer.github.io>

	* tangleboot.pin,
	* tangle.ch,
	* weav-twill.ch,
	* weave.ch: 'current_option' runs from '0..n_options'.

2023-10-13  Andreas Scherer  <https://ascherer.github.io>

	* help.h,
	* weav-twill.ch,
	* weave.ch: Add option '-p' to '\input pwebmac'.

2023-10-09  Karl Berry  <karl@freefriends.org>

	* lib/texmfmp.c (parse_options): if --output-directory was
	specified, putenv the value to TEXMF_OUTPUT_DIRECTORY.
	If --output-directory was not specified, and
	TEXMF_OUTPUT_DIRECTORY is set in the environment (not config file),
	set the output_directory variable to its value.
	* tests/outputdir.test: new test.
	* am/texmf.am (tex_tests): add it.
	* doc/web2c.texi (Output file location),
	* NEWS: document this.
	* bibtex.ch: mention failure to implement TEXMF_OUTPUT_DIRECTORY.

	* doc/web2c.texi (Shell escape commands): xref kpathsea doc
	on output paranoia.
	* tests/tex-closeout.test: tweak description.

2023-10-09  Karl Berry  <karl@freefriends.org>

	* cpascal.h: typo.
